使用 Colaboratory 创建

--- a/CycleGAN.ipynb
+++ b/CycleGAN.ipynb
@@ -47,21 +47,22 @@
       "metadata": {
         "id": "DzNjXfSCX7ZO",
         "colab_type": "code",
-        "outputId": "98f37a0e-dfba-419f-ae2a-fc9ec2f0d95d",
+        "outputId": "9cacaae5-01c0-46e7-bf43-0fa65d68ceb7",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 34
         }
       },
       "source": [
-        "!git clone https://github.com/pkmital/CycleGAN.git"
+        "# !git clone https://github.com/pkmital/CycleGAN.git\n",
+        "!git status"
       ],
-      "execution_count": 0,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "fatal: destination path 'CycleGAN' already exists and is not an empty directory.\r\n"
+            "fatal: not a git repository (or any of the parent directories): .git\n"
           ],
           "name": "stdout"
         }
@@ -260,7 +261,9 @@
       },
       "source": [
         "\n",
-        "We're going to need to build a set of operations that map one image collection to another, and build those operations for each image collection $X$ and $Y$.  We'll also have to build another set of operations so that there is a complete cycle of operations that attempt to map our first collection of images, $X$, to the second collection, $Y$, so a fake $Y$ which we denote mathematically by $\\hat{Y}$, and then another generator to map both the real $Y$ and the fake $\\hat{Y}$ back to $\\hat{X}$ again. In the Figure below, we can sort of see how this works graphically with two collections, $X$ and $Y$:\n"
+        "We're going to need to build a set of operations that map one image collection to another, and build those operations for each image collection $X$ and $Y$.  We'll also have to build another set of operations so that there is a complete cycle of operations that attempt to map our first collection of images, $X$, to the second collection, $Y$, so a fake $Y$ which we denote mathematically by $\\hat{Y}$, and then another generator to map both the real $Y$ and the fake $\\hat{Y}$ back to $\\hat{X}$ again. In the Figure below, we can sort of see how this works graphically with two collections, $X$ and $Y$:\n",
+        "\n",
+        "我们需要建立一个指令集从一个图片映射到另外一个图片中去。同时还有另外一个指令集能够循环的从第一个图片集映射到第二个图片集中"
       ]
     },
     {
